--- a/index.html
+++ b/index.html
@@ -200,6 +200,9 @@
 </section>
 
 
+
+
+
 <section class="product" id="Productos">
          <div class="container">
             <div class="row">
@@ -214,12 +217,12 @@
             </div>
             <div class="row">
                 <div class="col-12 col-md-12 col-lg-3">
-                 <div class="card bg-light shadow-sm border-0 px-2 py-3 mb-4">
+                 <div class="card bg-light shadow-sm border-0 px-2 py-3 mb-4 bg-black">
                    <div class="text-center">
                         <img src="imagenes/pr1.png" alt="">
                     </div>
-                    <div class="card-body">
-                         <h5 class="card-title">card title></h5>
+                     <div class="card-body text-white">
+                         <h5 class="card-title text-white">card title></h5>
                          <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             Ipsum, corrupti iusto nesciunt hic distinctio quos at laborum aperiam? Earum rem, 
@@ -232,12 +235,12 @@
                 </div>
 
                 <div class="col-12 col-md-12 col-lg-3">
-                    <div class="card bg-light shadow-sm border-0 px-2 py-3 mb-4">
+                    <div class="card bg-light shadow-sm border-0 px-2 py-3 mb-4 bg-black">
                       <div class="text-center">
                            <img src="imagenes/pr2.png" alt="">
                        </div>
-                       <div class="card-body">
-                            <h5 class="card-title">card title></h5>
+                       <div class="card-body text-white">
+                            <h5 class="card-title text-white">card title></h5>
                             <p>
                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                                Ipsum, corrupti iusto nesciunt hic distinctio quos at laborum aperiam? Earum rem, 
@@ -250,12 +253,12 @@
                    </div>
 
                    <div class="col-12 col-md-12 col-lg-3">
-                    <div class="card bg-light shadow-sm border-0 px-2 py-3 mb-4">
+                    <div class="card bg-light shadow-sm border-0 px-2 py-3 mb-4 bg-black">
                       <div class="text-center">
                            <img src="imagenes/pr3.png" alt="">
                        </div>
-                       <div class="card-body">
-                            <h5 class="card-title">card title></h5>
+                       <div class="card-body text-white">
+                            <h5 class="card-title text-white">card title></h5>
                             <p>
                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                                Ipsum, corrupti iusto nesciunt hic distinctio quos at laborum aperiam? Earum rem, 
@@ -268,12 +271,12 @@
                    </div>
 
                    <div class="col-12 col-md-12 col-lg-3">
-                    <div class="card bg-light shadow-sm border-0 px-2 py-3 mb-4">
+                    <div class="card bg-light shadow-sm border-0 px-2 py-3 mb-4 bg-black">
                       <div class="text-center">
                            <img src="imagenes/pr4.png" alt="">
                        </div>
-                       <div class="card-body">
-                            <h5 class="card-title">card title></h5>
+                       <div class="card-body text-white">
+                            <h5 class="card-title text-white">card title></h5>
                             <p>
                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                                Ipsum, corrupti iusto nesciunt hic distinctio quos at laborum aperiam? Earum rem, 
@@ -286,12 +289,12 @@
                    </div>
 
                    <div class="col-12 col-md-12 col-lg-3">
-                    <div class="card bg-light shadow-sm border-0 px-2 py-3 mb-4">
+                    <div class="card bg-light shadow-sm border-0 px-2 py-3 mb-4 bg-black">
                       <div class="text-center">
                            <img src="imagenes/pr5.png" alt="">
                        </div>
-                       <div class="card-body">
-                            <h5 class="card-title">card title></h5>
+                       <div class="card-body text-white">
+                            <h5 class="card-title text-white">card title></h5>
                             <p>
                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                                Ipsum, corrupti iusto nesciunt hic distinctio quos at laborum aperiam? Earum rem, 
@@ -304,12 +307,12 @@
                    </div>
 
                    <div class="col-12 col-md-12 col-lg-3">
-                    <div class="card bg-light shadow-sm border-0 px-2 py-3 mb-4">
+                    <div class="card bg-light shadow-sm border-0 px-2 py-3 mb-4 bg-black">
                       <div class="text-center">
                            <img src="imagenes/pr6.png" alt="">
                        </div>
-                       <div class="card-body">
-                            <h5 class="card-title">card title></h5>
+                       <div class="card-body text-white">
+                            <h5 class="card-title text-white">card title></h5>
                             <p>
                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                                Ipsum, corrupti iusto nesciunt hic distinctio quos at laborum aperiam? Earum rem, 
@@ -322,12 +325,12 @@
                    </div>
 
                    <div class="col-12 col-md-12 col-lg-3">
-                    <div class="card bg-light shadow-sm border-0 px-2 py-3 mb-4">
+                    <div class="card bg-light shadow-sm border-0 px-2 py-3 mb-4 bg-black">
                       <div class="text-center">
                            <img src="imagenes/pr7.png" alt="">
                        </div>
-                       <div class="card-body">
-                            <h5 class="card-title">card title></h5>
+                       <div class="card-body text-white">
+                            <h5 class="card-title text-white">card title></h5>
                             <p>
                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                                Ipsum, corrupti iusto nesciunt hic distinctio quos at laborum aperiam? Earum rem, 
@@ -340,12 +343,12 @@
                    </div>
 
                    <div class="col-12 col-md-12 col-lg-3">
-                    <div class="card bg-light shadow-sm border-0 px-2 py-3 mb-4">
+                    <div class="card bg-light shadow-sm border-0 px-2 py-3 mb-4 bg-black">
                       <div class="text-center">
                            <img src="imagenes/pr8.png" alt="">
                        </div>
-                       <div class="card-body">
-                            <h5 class="card-title">card title></h5>
+                       <div class="card-body text-white">
+                            <h5 class="card-title text-white">card title></h5>
                             <p>
                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                                Ipsum, corrupti iusto nesciunt hic distinctio quos at laborum aperiam? Earum rem, 
@@ -358,6 +361,12 @@
           </div>
     </div>
 </section>
+
+
+
+
+
+
 
 <section class="banner" id="piesas">
     <div class="container">
